# waiter-trait

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  non_interval.rs  std_impls.rs  tick_delay.rs  tick_waiter.rs  timed_tick_waiter.rs
