[package]
    authors = ["Jalon Wong <jalonwong@gmail.com>"]
    description = "Traits used to wait and timeout."
    documentation = "https://docs.rs/waiter-trait"
    edition = "2024"
    keywords = ["embedded", "no-std"]
    license = "MIT OR Apache-2.0"
    name = "waiter-trait"
    readme = "README.md"
    repository = "https://github.com/mcu-rust/waiter-trait"
    version = "0.9.0"

    [package.metadata.docs.rs]
        features = ["std"]

[features]
    std = []

[dependencies]
    embedded-hal = "1"
    fugit = "0.3"
